--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     #fp-equation::placeholder, #newton-equation::placeholder, #newton-derivative::placeholder, #lagrange-points::placeholder, #lagrange-x::placeholder, #divided-diff-points::placeholder, #divided-diff-x::placeholder, #ls-points::placeholder, #trapezoid-equation::placeholder, #trapezoid-a::placeholder, #trapezoid-b::placeholder, #trapezoid-n::placeholder, #simpson13-equation::placeholder, #simpson13-a::placeholder, #simpson13-b::placeholder, #simpson13-n::placeholder, #simpson38-equation::placeholder, #simpson38-a::placeholder, #simpson38-b::placeholder, #simpson38-n::placeholder {
       color: #9CA3AF !important; /* Gris claro para el placeholder */
     }
+input[type="number"] {
+      color: #1F2937 !important; /* Negro oscuro para el texto y valores por defecto */
+      -webkit-text-fill-color: #1F2937 !important; /* Para navegadores WebKit */
+    }
     #virtual-keyboard {
       z-index: 1000 !important; /* Asegura que el teclado esté por encima de todo */
       min-width: 600px; /* Ancho mínimo para el teclado */
