--- a/index.html
+++ b/index.html
@@ -39,32 +39,25 @@ input[type="number"] {
     margin-right: auto;
     display: block;
   }
-  /* Estilos para el botón hamburguesa */
-  #menu-toggle.open .hamburger-icon:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
+
+    /* Colores FES */
+  .text-azulFES {
+    color: #003366; /* Azul institucional */
   }
-  #menu-toggle.open .hamburger-icon:nth-child(2) {
-    opacity: 0;
+  .text-grisFES {
+    color: #808080; /* Gris institucional */
   }
-  #menu-toggle.open .hamburger-icon:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
+  /* Estilos para el modal */
+  #manual-modal {
+    z-index: 1000; /* Por encima de otros elementos */
   }
-  /* Ajustar el teclado virtual para móviles */
-  @media (max-width: 640px) {
-    #virtual-keyboard {
-      min-width: 100%;
-      width: 100%;
-      padding: 8px;
-      box-sizing: border-box;
-      bottom: 0;
-      left: 0;
-      transform: none;
-    }
-    .kbd-btn {
-      min-width: 0;
-      padding: 8px;
-      font-size: 12px;
-    }
+  #manual-modal .max-h-[80vh] {
+    max-height: 80vh; /* Limita altura para scroll */
+  }
+  #close-manual {
+    font-size: 1.5rem; /* Tamaño del botón de cierre */
+  }
+  
   </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 font-sans">
@@ -83,6 +76,7 @@ input[type="number"] {
         <li><button class="method-btn w-full text-left p-2 hover:bg-blue-100 dark:hover:bg-blue-900 rounded" data-method="simpson-13">Simpson 1/3</button></li>
         <li><button class="method-btn w-full text-left p-2 hover:bg-blue-100 dark:hover:bg-blue-900 rounded" data-method="simpson-38">Simpson 3/8</button></li>
       </ul>
+      <button id="manual-btn" class="w-full text-left p-2 mt-4 bg-blue-500 text-white rounded hover:bg-blue-600">Manual</button>
     </div>
     <!-- Main Content -->
     <div class="flex-1 p-6 overflow-auto">
@@ -173,6 +167,127 @@ input[type="number"] {
           <button class="kbd-btn bg-green-600 text-white p-2 rounded hover:bg-green-700" data-value="ok">OK</button>
         </div>
       </div>
+
+      <!-- Manual Modal -->
+  <div id="manual-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg max-w-3xl w-full max-h-[80vh] overflow-y-auto">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100">Manual de Usuario</h2>
+        <button id="close-manual" class="text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200">×</button>
+      </div>
+      <div id="manual-content">
+        <h3 class="text-xl font-semibold text-azulFES mb-2">Calculadora de Métodos Numéricos II</h3>
+        <p class="mb-4">La <strong>Calculadora de Métodos Numéricos II</strong> es una herramienta web diseñada para resolver problemas numéricos de manera interactiva. Permite a los usuarios aplicar métodos como Punto Fijo, Newton, interpolación de Lagrange, Diferencias Divididas, Mínimos Cuadrados, y reglas de integración como Trapecio, Simpson 1/3 y Simpson 3/8. La interfaz es intuitiva, cuenta con un teclado virtual para ingresar ecuaciones y parámetros, y muestra resultados detallados con pasos y tablas.</p>
+        <h4 class="text-lg font-semibold text-azulFES mb-2">Requisitos del Sistema</h4>
+        <ul class="list-disc list-inside mb-4">
+          <li>Un navegador web moderno (Google Chrome, Firefox, Safari, Edge, etc).</li>
+          <li>Conexión a internet para acceder a <a href="https://unix0ps.github.io/METODOS_NUMERICOS_II/" target="_blank" class="text-azulFES underline">https://unix0ps.github.io/METODOS_NUMERICOS_II/</a>.</li>
+          <li>No se requiere instalación, ya que la aplicación es completamente web.</li>
+        </ul>
+        <h4 class="text-lg font-semibold text-azulFES mb-2">Navegación en la Interfaz</h4>
+        <p class="mb-2">La interfaz está dividida en tres áreas principales:</p>
+        <ul class="list-disc list-inside mb-4">
+          <li><strong>Barra lateral izquierda</strong>: Contiene el título, el logo de la FES Acatlán y botones para seleccionar los métodos numéricos.</li>
+          <li><strong>Área de contenido principal</strong>: Muestra la descripción del método, campos de entrada, resultados, pasos y tablas.</li>
+          <li><strong>Teclado virtual</strong>: Aparece al hacer clic en un campo de texto para facilitar la entrada de ecuaciones y parámetros.</li>
+        </ul>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Barra Lateral</h5>
+        <ul class="list-disc list-inside mb-4">
+          <li><strong>Título "Métodos Numéricos"</strong>: Haz clic para volver a la página inicial, que describe la importancia de los métodos numéricos.</li>
+          <li><strong>Logo FES Acatlán</strong>: Identifica la institución asociada.</li>
+          <li><strong>Botones de métodos</strong>: Selecciona un método (Punto Fijo, Newton, Lagrange, etc.) para cargar su formulario.</li>
+        </ul>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Área de Contenido</h5>
+        <ul class="list-disc list-inside mb-4">
+          <li><strong>Título del método</strong>: Indica el método seleccionado.</li>
+          <li><strong>Descripción</strong>: Explica el método y su fórmula matemática.</li>
+          <li><strong>Campos de entrada</strong>: Formularios para ingresar ecuaciones, parámetros o puntos.</li>
+          <li><strong>Botón "Calcular"</strong>: Ejecuta el cálculo con los datos ingresados.</li>
+          <li><strong>Resultados</strong>: Muestra la solución aproximada.</li>
+          <li><strong>Botones "Mostrar Pasos" y "Tabla"</strong>: Permiten ver u ocultar los pasos del cálculo y la tabla de datos.</li>
+        </ul>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Teclado Virtual</h5>
+        <ul class="list-disc list-inside mb-4">
+          <li>Aparece al hacer clic en un campo de texto.</li>
+          <li>Incluye números, operadores (+, -, *, /, ^), funciones matemáticas (sin, cos, ln, etc.), variables (x, y, z), constantes (π, e) y botones especiales:</li>
+          <ul class="list-disc list-inside ml-4">
+            <li><strong>C</strong>: Borra el contenido del campo.</li>
+            <li><strong>OK</strong>: Cierra el teclado, añadiendo paréntesis de cierre si es necesario.</li>
+          </ul>
+          <li>Haz clic fuera del teclado para ocultarlo o al darle al botón OK.</li>
+        </ul>
+        <h4 class="text-lg font-semibold text-azulFES mb-2">Uso de los Métodos Numéricos</h4>
+        <p class="mb-2">A continuación, se detalla cómo usar cada método. Todos los métodos requieren completar los campos de entrada y presionar "Calcular".</p>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Método de Punto Fijo</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa la ecuación \( g(x) \) (ej. <code>Math.cos(x)</code> o <code>x/2 + 1</code>).</li>
+          <li>Especifica el valor inicial \( x_0 \), la tolerancia (ej. 0.0001) y el máximo de iteraciones (ej. 100).</li>
+          <li>Usa el teclado virtual para ecuaciones complejas.</li>
+          <li>Presiona "Calcular" para obtener la raíz aproximada.</li>
+          <li>Usa "Mostrar Pasos" para más operaciones.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Método de Newton</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa la ecuación \( f(x) \) (ej. <code>x^2 - 2</code>) y su derivada \( f'(x) \) (ej. <code>2*x</code>).</li>
+          <li>Proporciona el valor inicial \( x_0 \), la tolerancia y el máximo de iteraciones.</li>
+          <li>Usa el teclado virtual para las ecuaciones.</li>
+          <li>Presiona "Calcular" para encontrar la raíz.</li>
+          <li>Revisa los pasos y la tabla para más operaciones.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Interpolación de Lagrange</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa los puntos \( (x, y) \) separados por comas (ej. <code>0,1, 1,2, 2,4</code>).</li>
+          <li>Especifica el valor \( x \) para interpolar (ej. 1.5).</li>
+          <li>Presiona "Calcular" para obtener el valor interpolado.</li>
+          <li>Consulta los pasos y la tabla para el polinomio y los cálculos.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Diferencias Divididas</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa los puntos \( (x, y) \) separados por comas (ej. <code>0,1, 1,2, 2,4</code>).</li>
+          <li>Indica el valor \( x \) para interpolar.</li>
+          <li>Presiona "Calcular" para obtener el resultado.</li>
+          <li>Revisa los pasos y la tabla para las diferencias divididas.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Mínimos Cuadrados</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa los puntos \( (x, y) \) separados por comas (ej. <code>0,1, 1,1.2, 2,2.1</code>).</li>
+          <li>Presiona "Calcular" para obtener la recta de regresión \( y = mx + b \).</li>
+          <li>Usa los pasos y la tabla para ver los cálculos y predicciones.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Regla del Trapecio</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa la función \( f(x) \) (ej. <code>x^2</code>).</li>
+          <li>Especifica los límites inferior \( a \), superior \( b \), y el número de subintervalos \( n \).</li>
+          <li>Presiona "Calcular" para aproximar la integral.</li>
+          <li>Consulta los pasos y la tabla para los puntos y pesos.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Regla de Simpson 1/3</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa la función \( f(x) \).</li>
+          <li>Proporciona los límites \( a \), \( b \), y \( n \) (par).</li>
+          <li>Presiona "Calcular" para la integral aproximada.</li>
+          <li>Revisa los pasos y la tabla para los cálculos.</li>
+        </ol>
+        <h5 class="text-base font-semibold text-grisFES mb-2">Regla de Simpson 3/8</h5>
+        <ol class="list-decimal list-inside mb-4">
+          <li>Ingresa la función \( f(x) \).</li>
+          <li>Especifica \( a \), \( b \), y \( n \) (múltiplo de 3).</li>
+          <li>Presiona "Calcular" para obtener el resultado.</li>
+          <li>Usa los pasos y la tabla para más detalles.</li>
+        </ol>
+        <h4 class="text-lg font-semibold text-azulFES mb-2">Resolución de Errores Comunes</h4>
+        <ul class="list-disc list-inside mb-4">
+          <li><strong>Ecuación inválida</strong>: Asegúrate de usar sintaxis JavaScript (el teclado virtual utiliza la nomenclatura correcta).</li>
+          <li><strong>Puntos inválidos</strong>: Ingresa pares \( (x, y) \) separados por comas, sin espacios extra.</li>
+          <li><strong>Parámetros incorrectos</strong>: Verifica que \( a < b \), \( n \) sea positivo, par (Simpson 1/3) o múltiplo de 3 (Simpson 3/8).</li>
+          <li><strong>No converge</strong>: Ajusta el valor inicial, tolerancia o máximo de iteraciones.</li>
+        </ul>
+        <h4 class="text-lg font-semibold text-azulFES mb-2">Conclusión</h4>
+        <p class="mb-4">La Calculadora de Métodos Numéricos II es una herramienta fácil de usar para estudiantes y profesionales. Su diseño interactivo y la posibilidad de ver pasos detallados facilitan el aprendizaje y la resolución de problemas numéricos.</p>
+        <p>Consulta la aplicación en <a href="https://unix0ps.github.io/METODOS_NUMERICOS_II/" target="_blank" class="text-azulFES underline">https://unix0ps.github.io/METODOS_NUMERICOS_II/</a>.</p>
+      </div>
+    </div>
+      
     </div>
   </div>
 
@@ -1353,14 +1468,25 @@ function handleKeyboardClick(event) {
       }
     });
 
-    // Toggle sidebar with hamburger menu
-    const menuToggle = document.getElementById('menu-toggle');
-    const sidebar = document.getElementById('sidebar');
-    menuToggle.addEventListener('click', () => {
-    sidebar.classList.toggle('translate-x-0');
-    sidebar.classList.toggle('-translate-x-full');
-    menuToggle.classList.toggle('open');
-    });
+    // Manual Modal Logic
+document.getElementById('manual-btn').addEventListener('click', () => {
+  const manualModal = document.getElementById('manual-modal');
+  manualModal.classList.remove('hidden');
+  MathJax.typeset(); // Renderizar ecuaciones en el modal
+});
+
+document.getElementById('close-manual').addEventListener('click', () => {
+  const manualModal = document.getElementById('manual-modal');
+  manualModal.classList.add('hidden');
+});
+
+// Close modal when clicking outside
+document.getElementById('manual-modal').addEventListener('click', (event) => {
+  if (event.target === document.getElementById('manual-modal')) {
+    document.getElementById('manual-modal').classList.add('hidden');
+  }
+});
+    
   </script>
 </body>
 </html>
