--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ input[type="number"] {
 
     /* Colores FES */
   .text-azulFES {
-    color: #003366; /* Azul institucional */
+    color: #FFFFFF; /* Azul institucional */
   }
   .text-grisFES {
     color: #808080; /* Gris institucional */
