--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input[type="number"] {
     color: #B88402 /* Dorado institucional */
   }
   .text-grisFES {
-    color: #808080; /* Gris institucional */
+    color: #002E6C; /* Azul institucional */
   }
   /* Estilos para el modal */
   #manual-modal {
