--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input[type="number"] {
     color: #B88402 /* Dorado institucional */
   }
   .text-grisFES {
-    color: #002E6C; /* Azul institucional */
+    color: #808080 /* Gris institucional */
   }
   /* Estilos para el modal */
   #manual-modal {
@@ -55,7 +55,7 @@ input[type="number"] {
     max-height: 80vh; /* Limita altura para scroll */
   }
   #close-manual {
-    font-size: 1.5rem; /* Tamaño del botón de cierre */
+    font-size: 1.7rem; /* Tamaño del botón de cierre */
   }
   
   </style>
