--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ input[type="number"] {
     }
     #virtual-keyboard {
       z-index: 1000 !important; /* Asegura que el teclado esté por encima de todo */
-      min-width: 200px; /* Ancho mínimo para el teclado */
+      min-width: 150px; /* Ancho mínimo para el teclado */
     }
     .kbd-btn {
-      min-width: 10px; /* Tamaño uniforme para los botones */
+      min-width: 5px; /* Tamaño uniforme para los botones */
       text-align: center;
     }
     #sidebar-title {
@@ -34,6 +34,7 @@ input[type="number"] {
   }
   #sidebar-logo {
     max-width: 300px;
+    min-width: 100px;
     margin-top: 0.7rem;
     margin-left: auto;
     margin-right: auto;
