--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ input[type="number"] {
     margin-right: auto;
     display: block;
   }
+  #sidebar{
+ max-lenth: 100vh;
+  }
 
     /* Colores FES */
   .text-azulFES {
