--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@ input[type="number"] {
       min-width: 200px; /* Ancho mínimo para el teclado */
     }
     .kbd-btn {
-      min-width: 15px; /* Tamaño uniforme para los botones */
+      min-width: 20px; /* Tamaño uniforme para los botones */
       text-align: center;
+      font-size: clamp(12px, 5vw, 16px); /* Tamanho responsivo: mínimo 12px, máximo 16px y ajustado a la anchura de la vista */
+      line-height: 1; /* Altura de línea igual al tamaño de la fuente para centrar el texto */
+      padding: 4px 8px; /* Un poco de espacio dentro del botón */
+      border: 1px solid #ccc; /* Borde para visualizar mejor */
+      display: inline-block; /* Para evitar que el botón se estire */
     }
+    
     #sidebar-title {
     cursor: pointer;
   }
@@ -42,6 +48,7 @@ input[type="number"] {
   }
   #sidebar{
  max-lenth: 100vh;
+ min-lenth: 100vh;
   }
 
     /* Colores FES */
