--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ input[type="number"] {
       min-width: 200px; /* Ancho mínimo para el teclado */
     }
     .kbd-btn {
-      min-width: 20px; /* Tamaño uniforme para los botones */
+      min-width: 30px; /* Tamaño uniforme para los botones */
       text-align: center;
       font-size: clamp(12px, 5vw, 16px); /* Tamanho responsivo: mínimo 12px, máximo 16px y ajustado a la anchura de la vista */
       line-height: 1; /* Altura de línea igual al tamaño de la fuente para centrar el texto */
@@ -47,8 +47,8 @@ input[type="number"] {
     display: block;
   }
   #sidebar{
- max-lenth: 100vh;
- min-lenth: 100vh;
+ height: 100vh;
+    background-color: #003D79;
   }
 
     /* Colores FES */
