--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ input[type="number"] {
     #virtual-keyboard {
       z-index: 1000 !important; /* Asegura que el teclado esté por encima de todo */
       min-width: 200px; /* Ancho mínimo para el teclado */
+      bottom: 0; /* Lo posiciona en la parte inferior */
+      border-radius: 10px; /* Esquinas redondeadas */
     }
     .kbd-btn {
       min-width: 30px; /* Tamaño uniforme para los botones */
