--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ input[type="number"] {
   }
   #sidebar{
  height: 100vh;
-    background-color: #1F2937;
+    background-color: #000000;
   }
 
     /* Colores FES */
