--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ input[type="number"] {
   }
   #sidebar{
     height: 100vh;
-    min-height: 100vh;
+    min-height: 500px;
     background-color: #000000;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.3); /* Sombras para darle profundidad */
   } 
