--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@ input[type="number"] {
     }
     #virtual-keyboard {
       z-index: 1000 !important; /* Asegura que el teclado esté por encima de todo */
-      min-width: 250px; /* Ancho mínimo para el teclado */
+      min-width: 350px; /* Ancho mínimo para el teclado */
       bottom: 0; /* Lo posiciona en la parte inferior */
       border-radius: 5px; /* Esquinas redondeadas */
     }
     .kbd-btn {
   text-align: center;
-  font-size: clamp(12px, 5vw, 16px); /* Tamaño responsivo: mínimo 12px, máximo 16px, y ajustado a la anchura de la vista */
+  font-size: clamp(8px, 3vw, 16px); /* Tamaño responsivo: mínimo 12px, máximo 16px, y ajustado a la anchura de la vista */
   line-height: 1; /* Altura de línea igual al tamaño de la fuente para centrar el texto */
   padding: 4px 8px; /* Espaciado interno para que el texto no esté pegado a los bordes */
   border: 1px solid #ccc; /* Borde para visualizar el botón */
   display: inline-block; /* Hace que el ancho dependa del contenido */
   width: auto; /* El ancho del botón dependerá del contenido (texto) */
   white-space: nowrap; /* Evita que el texto se divida en varias líneas */
-  text-overflow: ellipsis; /* Si el texto es demasiado largo, se corta con "..." (opcional) */
+  text-overflow: ellipsis; /* Si el texto es demasiado largo, se corta con "..." */
 }   
     #sidebar-title {
     cursor: pointer;
