--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ input[type="number"] {
   padding: 4px 8px; /* Espaciado interno para que el texto no esté pegado a los bordes */
   border: 1px solid #ccc; /* Borde para visualizar el botón */
   display: inline-block; /* Hace que el ancho dependa del contenido */
-  width: auto; /* El ancho del botón dependerá del contenido (texto) */
+  min-width: 20px /* El ancho del botón dependerá del contenido (texto) */
   white-space: nowrap; /* Evita que el texto se divida en varias líneas */
   text-overflow: ellipsis; /* Si el texto es demasiado largo, se corta con "..." */
 }   
