--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ input[type="number"] {
     }
     .kbd-btn {
   text-align: center;
-  font-size: clamp(3px, 3vw, 16px); /* Tamaño responsivo: mínimo 12px, máximo 16px, y ajustado a la anchura de la vista */
+  font-size: clamp(0.5rem, 3vw, 16px); /* Tamaño responsivo: mínimo 12px, máximo 16px, y ajustado a la anchura de la vista */
   line-height: 1; /* Altura de línea igual al tamaño de la fuente para centrar el texto */
   padding: 4px 8px; /* Espaciado interno para que el texto no esté pegado a los bordes */
   border: 1px solid #ccc; /* Borde para visualizar el botón */
