--- a/index.html
+++ b/index.html
@@ -23,20 +23,48 @@ input[type="number"] {
     }
     #virtual-keyboard {
       z-index: 1000 !important; /* Asegura que el teclado esté por encima de todo */
-      min-width: 520px; /* Ancho mínimo para el teclado */
       bottom: 0; /* Lo posiciona en la parte inferior */
       border-radius: 5px; /* Esquinas redondeadas */
     }
     .kbd-btn {
   text-align: center;
-  font-size: clamp(4px, 3vw, 16px); /* Tamaño responsivo: mínimo 12px, máximo 16px, y ajustado a la anchura de la vista */
   line-height: 1; /* Altura de línea igual al tamaño de la fuente para centrar el texto */
   padding: 4px 8px; /* Espaciado interno para que el texto no esté pegado a los bordes */
   border: 1px solid #ccc; /* Borde para visualizar el botón */
-  min-width: 80px /* El ancho del botón dependerá del contenido (texto) */
   white-space: nowrap; /* Evita que el texto se divida en varias líneas */
   text-overflow: ellipsis; /* Si el texto es demasiado largo, se corta con "..." */
-}   
+  }   
+
+  @media (min-width: 768px) and (max-width: 1024px)  {
+    /* Estilos para pantallas con un poco más de ancho que de alto */
+
+    #virtual-keyboard {
+      min-width: 520px; /* Ancho mínimo para el teclado */
+    }
+    .kbd-btn {
+      text-align: center;
+      font-size: clamp(4px, 3vw, 10px); /* Tamaño responsivo: mínimo 4px, máximo 10px, y ajustado a la anchura de la vista */
+  }  
+  }
+
+  @media (max-width: 600px) and (min-height: 800px) {
+    /* Estilos para pantallas verticales */
+    #virtual-keyboard {
+      min-width: 200px; /* Ancho mínimo para el teclado */
+    }
+    
+    .kbd-btn {
+       text-align: center;
+       font-size: clamp(4px, 3vw, 5px); /* Tamaño responsivo: mínimo 4px, máximo 5px, y ajustado a la anchura de la vista */
+  } 
+  }
+
+
+
+
+
+
+    
     #sidebar-title {
     cursor: pointer;
   }
